// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPreview > should be able to render with an icon's size and without the color text visible 1`] = `
<span
  class="color-preview color-preview--icon"
  data-testid="color"
  style="--color-preview-color: #0F0F0F;"
>
  <span
    class="rmd-sr-only"
  >
    #0F0F0F
  </span>
</span>
`;

exports[`ColorPreview > should ignore children and throw a type error 1`] = `
<span
  class="color-preview color-preview--text"
  data-testid="color"
  style="--color-preview-color: rgb(255, 12, 32);"
>
  <code
    class="inline-code inline-code--ticked"
  >
    rgb(255, 12, 32)
  </code>
</span>
`;

exports[`ColorPreview > should render correctly 1`] = `
<span
  class="color-preview color-preview--text"
  data-testid="color"
  style="--color-preview-color: #faf;"
>
  <code
    class="inline-code inline-code--ticked"
  >
    #faf
  </code>
</span>
`;
